--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,46 @@
 /*******************************/
 /* Written By..: AJ            */
 /* Date Written: June 23, 2024 */
-/* Purpose.....: Design CSS    */
+/* Last Written: July 11, 2024 */
+/* Purpose.....: Portfolio CSS */
 /*******************************/
 
 /* GENERAL */
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
+/* Light Mode (Default) */
+:root
+{
+    --primary-color: white;
+    --primary-color-2: rgb(250, 250, 250);
+    --primary-color-3: rgb(181, 181, 181);
+    --background-color: rgb(255, 255, 255);
+    --secondary-color: black;
+    --secondary-color-2: rgb(85, 85, 85);
+    --button-background: rgb(53, 53, 53);
+    --button-text-hover: grey;
+    --button-border: rgb(53, 53, 53) 0.1rem solid;
+    --button-border-2: rgb(255, 255, 255) 0.1rem solid;
+    --container-border: rgb(163, 163, 163);
+}
+
+/* Dark Mode */
+:root
+[theme="dark"]
+{
+    --primary-color: black;
+    --primary-color-2: rgb(39, 39, 39);
+    --primary-color-3: rgb(74, 74, 74);
+    --background-color: rgb(33, 33, 33);
+    --secondary-color: white;
+    --secondary-color-2: rgb(170, 170, 170);
+    --button-background: rgb(202, 202, 202);
+    --button-text-hover: lightgrey;
+    --button-border: rgb(202, 202, 202) 0.1rem solid;
+    --button-border-2: rgb(0, 0, 0) 0.1rem solid;
+    --container-border: rgb(92, 92, 92);
+}
 
 *
 {
@@ -14,9 +48,15 @@
     padding: 0;
 }
 
+h3
+{
+    color: var(--secondary-color);
+}
+
 body
 {
    font-family: "Poppins", sans-serif;
+   background-color: var(--background-color);
 }
 
 html
@@ -26,7 +66,7 @@ html
 
 p
 {
-    color: rgb(85, 85, 85);
+    color: var(--secondary-color-2);
 }
 
 /* TRANSITION */
@@ -41,12 +81,12 @@ a, .btn
 nav, .nav-links
 {
     display: flex;
+    align-items: center;
 }
 
 nav
 {
     justify-content: space-around;
-    align-items: center;
     height: 17vh; /* how much screen space the nav takes up */
 }
 
@@ -57,23 +97,37 @@ nav
     font-size: 1.5rem; /* change font size */
 }
 
+nav li:last-child
+{
+    width: max-content;
+    display: flex;
+    margin: auto;
+    padding: 10px;
+}
+
 a
 {
-    color: black;
+    color: var(--secondary-color);
     text-decoration: none;
-    text-decoration-color: white;
+    text-decoration-color: var(--primary-color);
 }
 
 a:hover
 {
-    color: grey;
     text-decoration: underline; /* shows underline when hover */
     text-underline-offset: 1rem; /* underline is seperated more between word and line */
-    text-decoration-color: rgb(181, 181, 181);
+    text-decoration-color: var(--secondary-color);
+}
+
+nav a:hover
+{
+    color: var(--secondary-color);
+    text-decoration: var(--secondary-color);
 }
 
 .logo
 {
+    color: var(--secondary-color);
     font-size: 2rem; /* my name is big */
 }
 
@@ -109,7 +163,7 @@ a:hover
 {
     width: 100%;
     height: 2px;
-    background-color: black;
+    background-color: var(--secondary-color);
     transition: all 0.3 ease-in-out;
 }
 
@@ -118,7 +172,7 @@ a:hover
     position: absolute;
     top: 100%;
     right: 0;
-    background-color: white;
+    background-color: var(--primary-color);
     width: fit-content;
     max-height: 0;
     overflow: hidden;
@@ -132,7 +186,7 @@ a:hover
     text-align: center;
     text-decoration: none;
     font-size: 1.5rem;
-    color: black;
+    color: var(--secondary-color);
     transition: all 0.3 ease-in-out;
 }
 
@@ -234,6 +288,7 @@ section
 
 .title
 {
+    color: var(--secondary-color);
     font-size: 3rem;
     text-align: center;
 }
@@ -274,7 +329,8 @@ section
 
 .btn-color-1, .btn-color-2
 {
-    border: rgb(53, 53, 53) 0.1rem solid;
+    border: var(--button-border);
+    color: var(--secondary-color-2);
 }
 
 .btn-color-1:hover, .btn-color-2:hover
@@ -284,13 +340,13 @@ section
 
 .btn-color-1, .btn-color-2:hover
 {
-    background: rgb(53, 53, 53);
-    color: white;
+    background: var(--button-background);
+    color: var(--primary-color);
 }
 
 .btn-color-1:hover
 {
-    background: rgb(0, 0, 0);
+    background: var(--secondary-color);
 }
 
 .btn-color-2
@@ -300,7 +356,8 @@ section
 
 .btn-color-2:hover
 {
-    border: rgb(255, 255, 255) 0.1rem solid;
+    border: var(--button-border);
+    background: var(--secondary-color);
 }
 
 .btn-container
@@ -349,10 +406,10 @@ section
 {
     padding: 1.5rem;
     flex: 1;
-    background: white;
+    background: var(--primary-color-2);
     border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
-    border-color: rgb(163, 163, 163);
+    border: var(--button-border);
+    border-color: var(--container-border);
     text-align: center;
 }
 
@@ -378,7 +435,7 @@ section
 
 .experience-sub-title
 {
-    color: rgb(85, 85, 85);
+    color: var(--secondary-color);
     font-weight: 600;
     font-size: 1.75rem;
     margin-bottom: 2rem;
@@ -423,8 +480,8 @@ article .icon
 
 .color-container
 {
-    border-color: rgb(163, 163, 163);
-    background: rgb(250, 250, 250)
+    border-color: var(--container-border);
+    background: var(--primary-color-2);
 }
 
 .project-img
@@ -437,13 +494,13 @@ article .icon
 .project-title
 {
     margin: 1rem;
-    color: black;
+    color: var(--secondary-color);
 }
 
 .project-btn
 {
-    color: black;
-    border-color: rgb(163, 163, 163);
+    color: var(--secondary-color);
+    border-color: var(--container-border);
 }
 
 /* CONTACT */
@@ -461,9 +518,9 @@ article .icon
     display: flex;
     justify-content: center;
     border-radius: 2rem;
-    border: rgb(53, 53, 53) 0.1rem solid;
-    border-color: rgb(163, 163, 163);
-    background: rgb(250, 250, 250);
+    border: var(--button-border);
+    border-color: var(--container-border);
+    background: var(--background-color);
     margin: 2rem auto;
     padding: 0.5rem;
 }
