Add Laptop Media.css

--- a/media.css
+++ b/media.css
@@ -1,6 +1,7 @@
 /*******************************/
 /* Written By..: AJ            */
 /* Date Written: June 23, 2024 */
+/* Last Written: July 11, 2024 */
 /* Purpose.....: Media CSS     */
 /*******************************/
 
